Fixed line spacing in refrains. Stanza titles now centered. Sets focus to input form in report panel when panel is opened.

--- a/data/com/hourglassapps/cpi_ii/report/poem.css
+++ b/data/com/hourglassapps/cpi_ii/report/poem.css
@@ -13,7 +13,7 @@ iframe {
 }
 
 .heading {
-    text-indent: 1em;
+    text-align: center;
 }
 
 h2 {
